--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Profil Kami</title>
-    <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="style/profile.css">
     <link rel="shortcut icon" href="asset/images/mb7.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -102,9 +102,7 @@
 
       <h2 style="text-align: center;">Beragam ruangan produktif</h2>
 
-      <div class="">
 
-      </div>
       <!-- konten end -->
 
   <!-- Content end -->
