--- a/achi.html
+++ b/achi.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pencapaian Kami</title>
-    <link rel="stylesheet" href="achi.css">
+    <link rel="stylesheet" href="style/achi.css">
 </head>
 <body>
         <!-- Navbar -->
